--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>webjars-locator</artifactId>
+      <version>0.32-1</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
@@ -169,7 +170,7 @@
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
-      <plugin>
+     <!-- <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
         <executions>
@@ -187,7 +188,7 @@
           </generateGitPropertiesFilename>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
         </configuration>
-      </plugin>
+      </plugin> -->
 
       <plugin>
         <groupId>ro.isdc.wro4j</groupId>
@@ -216,6 +217,22 @@
           </dependency>
         </dependencies>
       </plugin>
+        
+        
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+        <execution>
+        <id>copy-dependencies</id>
+        <phase>package</phase>
+        <goals><goal>copy-dependencies</goal></goals>
+        </execution>
+        </executions>
+     </plugin>
+        
+        
     </plugins>
   </build>
   <reporting>
